--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 				
 		</div><!--/.row -->
 		<br>
-		<hr>
 		
-	</div><!--/.container -->
+		
+	</div><!--/.container --><hr>
 
 
 	<!-- AWARDS SECTION -->
