--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 				<!-- EDIT: awards line 2-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>Gender Recognition through voice using Supervised Machine Learning and Scikit-Learn</t><br/>
-						Developed a python program that can train an artificial neural network and use it to classify gender of the person based on the voice recording 
+						Developed a python program that can train an artificial neural network and use it to classify gender of the person based on the voice recording</br> 
 					</p>
 					
 				</div>
@@ -188,7 +188,7 @@
 				<!-- EDIT: awards line 3-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p class="tight"><t>Toll Tax collection automation system</t><br/>
-						Developed a system for the automation of toll tax collection.The system uses  live video feed to detect user of the vehicle and connect it to a wallet to make payments with user friendly interface and provide an efficient toll tax collection system. This can potentially replace the state of the art FastTag toll tax collection system.  
+						Developed a system for the automation of toll tax collection.The system uses  live video feed to detect user of the vehicle and connect it to a wallet to make payments with user friendly interface and provide an efficient toll tax collection system. This can potentially replace the state of the art FastTag toll tax collection system.</br>  
 					</p>
 					
 				</div>
