--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 	</div><!--/.container --><br><hr>
 
 
-	<!-- AWARDS SECTION -->
+	<!-- PROJECTS -->
 	<div class="container desc">
 		<div class="row">
-				<div class="col-lg-2 col-lg-offset-3">
+				<div class="col-lg-2 col-lg-offset-1">
 					<h5>PROJECTS</h5>
 				</div>
 
