--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
 					<p><a href="Pratik Sen_BML Munjal University.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
 				</div>
 				
+				<div class="typewriter">
+                  <h1>The cat and the hat.</h1>
+                </div>
+				
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/ #intro -->
