--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<h3>Web Developer | Machine Learning Enthusist | <a href="mailto:pratik.sen.bmu@gmail.com" target="_blank">pratik.sen.bmu@gmail.com</a></h3>
 				</div><!--/.col-lg-12 -->
 				
-				<div class="typewriter">
+				<div>
                   <h1>The cat and the hat.</h1>
                 </div>
 			</div><!--/.row -->
