--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<!-- EDIT: title | email -->
 					<h3>Web Developer | Machine Learning Enthusist | <a href="mailto:pratik.sen.bmu@gmail.com" target="_blank">pratik.sen.bmu@gmail.com</a></h3>
 					
-					<h5 class="typewriter-effect"></h1>
+					<h5 class="typewriter-effect">need a job.</h1>
 				</div><!--/.col-lg-12 -->
 
 			</div><!--/.row -->
