--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
 <script>
 $(document).ready(function() {
 $(".typewriter-effect").typer({
+startDelay: 1000,
+repeatDelay: 1000,
+backspaceDelay: 1000,
 strings: [
 "Welcome to TechSini",
 "This is How Typewriter Effect Looks"
