--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@ $(".typewriter-effect").typer({
 startDelay: 1000,
 repeatDelay: 1000,
 backspaceDelay: 1000,
+font-family: monospace;
+letter-spacing: .15em;
 strings: [
 "Welcome to TechSini",
 "This is How Typewriter Effect Looks"
