--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@ $(".typewriter-effect").typer({
 startDelay: 1000,
 repeatDelay: 1000,
 backspaceDelay: 1000,
-font-family: monospace;
-letter-spacing: .15em;
+font-family: monospace,
 strings: [
 "Welcome to TechSini",
 "This is How Typewriter Effect Looks"
