--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <script src="js/respond.min.js"></script>
     <![endif]-->
     <script src="pratik.js"></script>
-    <script src="typer.min.js.js"></script>
+    <script src="typer.min.js"></script>
   </head>
 
   <body>
