--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 					<!-- EDIT: title | email -->
 					<h3>Web Developer | Machine Learning Enthusist | <a href="mailto:pratik.sen.bmu@gmail.com" target="_blank">pratik.sen.bmu@gmail.com</a></h3>
 					
+					<div id ="myAnimation">
 					<p>I'm <span class="typer">a designer</span>
                       <!-- add underline for typewriter effect-->
                       <span class="blink">_</span></p>
+                    </div>
 				</div><!--/.col-lg-12 -->
 
 			</div><!--/.row -->
@@ -253,6 +255,7 @@
 	
 	<scrip>
 	    $(function() {
+       var elem = document.getElementById("myAnimation"); 
         var index = 0,
             count = 0;
         var word = '';
