--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
     <![endif]-->
-    <script src="pratik.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="typer.min.js"></script>
   </head>
 
   <body>
@@ -253,55 +254,20 @@
 		</div><!--/.container -->
 	</div><!--/ #footer -->
 	
-	<scrip>
-	    $(function() {
-       var elem = document.getElementById("myAnimation"); 
-        var index = 0,
-            count = 0;
-        var word = '';
-        var words = ["a programmer", "a developer", "a challenge-seeker", "a space enthusiast", "a hobby chef", "looking for work!"];
-        untype();
-
-        function type(word) {
-            setTimeout(function() {
-                if (word.length > 0) {
-                    $('.typer').append(word.shift());
-                    type(word);
-                } else if (word.length === 0) {
-                    pause();
-                }
-            }, 180)
-        }
-
-        function untype() {
-            setTimeout(function() {
-                word = $('.typer').html().split('');
-                word.pop();
-                if (word.length > 0) {
-                    $('.typer').empty().append(word);
-                    untype();
-                } else if (word.length === 0) {
-                    $('.typer').empty();
-                    nextWord();
-                }
-            }, 100);
-        }
-
-        function pause() {
-            setTimeout(function() {
-                untype();
-            }, 300);
-        }
-
-        function nextWord() {
-            index = count % 6;
-            count++;
-            word = words[index].split('');
-            type(word);
-        }
-    });
-
-	</scrip>
+	
+	<script>
+        $(document).ready(function() {
+        $(".typewriter-effect").typer({
+        startDelay: 1000,
+        repeatDelay: 1000,
+        backspaceDelay: 1000,
+        strings: [
+        "Welcome to TechSini",
+        "This is How Typewriter Effect Looks"
+        ] });
+        });
+      </script>
+	
   </body>
 </html>
 
