--- a/index.html
+++ b/index.html
@@ -262,8 +262,10 @@
         repeatDelay: 1000,
         backspaceDelay: 1000,
         strings: [
-        "Welcome to TechSini",
-        "This is How Typewriter Effect Looks"
+        "I am a Developer",
+        "Looking for a Job",
+        "Machine Learning is FUN",
+        "AI is here to stay"
         ] });
         });
       </script>
