--- a/index.html
+++ b/index.html
@@ -45,12 +45,7 @@
 					<h1>Pratik Sen</h1>
 					<!-- EDIT: title | email -->
 					<h3>Web Developer | Machine Learning Enthusist | <a href="mailto:pratik.sen.bmu@gmail.com" target="_blank">pratik.sen.bmu@gmail.com</a></h3>
-					
-					<div id ="myAnimation">
-					<p>I'm <span class="typer">a designer</span>
-                      <!-- add underline for typewriter effect-->
-                      <span class="blink">_</span></p>
-                    </div>
+					<h1 class="typewriter-effect"></h1>
 				</div><!--/.col-lg-12 -->
 
 			</div><!--/.row -->
