--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="typer.min.js"></script>
+    <script src="https://unpkg.com/ml5" type="text/javascript"></script>
   </head>
 
   <body>
